--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,23 +4,14 @@
 
 @tailwind utilities;
 
-.code {
-  @apply bg-gray-100 rounded-sm p-2 font-mono;
+body {
+  @apply bg-black text-white
 }
 
-.card {
-  @apply m-4 p-5 text-left no-underline rounded-lg border border-gray-200 transition-colors duration-200 block;
-
-  h3 {
-    @apply text-2xl mb-4 font-bold;
-  }
-
-  p {
-    @apply text-xl leading-normal;
-  }
+.nav-button {
+  @apply p-3 bg-gray-800 transition-colors duration-200;
 
   &:hover {
-    @apply text-blue-600 border-blue-600;
+    @apply bg-gray-700;
   }
 }
-
