--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,10 +8,18 @@ body {
   @apply bg-black text-white
 }
 
-.nav-button {
+.btn-nav-item {
   @apply p-3 bg-gray-800 transition-colors duration-200;
 
   &:hover {
     @apply bg-gray-700;
+  }
+}
+
+.btn-love {
+  @apply absolute right-2 top-2 p-1 border border-red-400 text-red-400 rounded-full h-6 w-6 flex items-center justify-center text-xs;
+
+  &:hover {
+    @apply bg-red-400 text-white;
   }
 }
