--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,11 @@
 @tailwind components;
 
 @tailwind utilities;
-
+/* #__next {
+  @media screen and (max-width: 768px) {
+    @apply px-3
+  }
+} */
 body {
   @apply bg-black text-white
 }
