Updates for sign in page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,11 +3,9 @@
 @tailwind components;
 
 @tailwind utilities;
-/* #__next {
-  @media screen and (max-width: 768px) {
-    @apply px-3
-  }
-} */
+#__next {
+  @apply min-h-screen
+}
 body {
   @apply bg-black text-white
 }
@@ -50,4 +48,10 @@ body {
 .badge-container {
   max-height: 13rem;
   @apply overflow-scroll;
+}
+
+.logged-out {
+  footer {
+    @apply fixed bottom-0 inset-x-0;
+  }
 }
