--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,13 +3,13 @@
 @tailwind components;
 
 @tailwind utilities;
-/* #__next {
-  @media screen and (max-width: 768px) {
-    @apply px-3
-  }
-} */
+
+#__next {
+  @apply min-h-screen;
+}
+
 body {
-  @apply bg-black text-white
+  @apply bg-black text-white;
 }
 
 .btn-nav-item {
@@ -50,4 +50,10 @@ body {
 .badge-container {
   max-height: 13rem;
   @apply overflow-scroll;
+}
+
+.logged-out {
+  footer {
+    @apply fixed bottom-0 inset-x-0;
+  }
 }
